# fcpm

./: CMakeLists.txt  README.md
benchmarks/: Makefile
benchmarks/geometry/: fcp_lookat.cpp  glm_lookat.cpp
benchmarks/linalg/: constructors.cpp  linsys.cpp  matrix.cpp  vector.cpp
include/: TODO  ex.cpp
include/core/: base.hpp  common.hpp  concepts.hpp  constexpr_statements.hpp  engine.hpp  expression_iterator.hpp  float_traits.hpp  forward.hpp  hardware.hpp  interface_base.hpp  math_comparison.hpp  math_exp_ln.hpp  math_fun.hpp  math_pow_root.hpp  math_trig.hpp  operators.hpp  operators_soo.hpp  traits.hpp
include/core/internal/: base.hpp  common.hpp  compiler_arch.hpp  engine.hpp  expression_iterator.hpp  expression_templates.hpp  float_traits.hpp  hardware.hpp  interface_base.hpp
include/geometry/: TODO  conversions.hpp  quaternion.hpp  transforms.hpp
include/geometry/internal/: quaternion_base.hpp  quaternion_class.hpp  quaternion_operations.hpp  transforms_rotations.hpp  transforms_simple.hpp  transforms_space_conversions.hpp
include/linalg/: block_view.hpp  linalg.hpp  matrix.hpp  operators.hpp  scalar.hpp
include/linalg/internal/: expression_templates.hpp  matrix_class.hpp  matrix_operations.hpp  operators.hpp  scalar.hpp  (+2 more)
tests/: Makefile
tests/core/: float_data.cpp  math_fun.cpp
tests/engine/: lazy_base.cpp  lazy_engine.cpp  lazy_expression_iterator.cpp  lazy_expression_templates.cpp  lazy_operators.cpp
tests/geometry/: conversions.cpp
tests/test_utils/: ansi_seq.hpp  eager_vector.hpp  float.hpp  test_utils.hpp  utility_eager_vector.cpp
(+18 files in other folders)
